# Cpp-best-practices

./: .gitignore  Makefile  README.md  beamerthemelaas.sty  bibliography.bib  main.tex
examples/live/: asan.cpp
examples/live/backwards/: CMakeLists.txt  test.cpp
examples/live/clang-tidy/: CMakeLists.txt  test.cpp
examples/slides/: lifetime.cpp  memory_leak.cpp  move.cpp  move1.cpp  move_explanation.cpp  move_impl.cpp  raii.cpp  raii1.cpp  references.cpp  references1.cpp  references2.cpp  rule_of_five.cpp  rule_of_zero.cpp  shared_ptr.cpp  when_moved.cpp
